--- a/trunk/basa2/basaasa/basaasa/templates/derived/doc/deleted.html
+++ b/trunk/basa2/basaasa/basaasa/templates/derived/doc/deleted.html
@@ -1,10 +1,10 @@
 <%inherit file="/base/index.html"/>
-<%def name="header()"><div id="header">${_(u"Document")}: ${_(u"deleted")}</div></%def>
+<%def name="header()">${_(u"Document")}</%def>
 <%def name="menu()">
 <div id="menu">
 ${h.link_to(_(u"List documents"), h.url_for(action="list", id=None))}
 </div>
 </%def>
 <p>
-Deleted
+${_("Deleted")}
 </p>
