--- a/trunk/basa2/basaasa/basaasa/public/css/main.css
+++ b/trunk/basa2/basaasa/basaasa/public/css/main.css
@@ -102,3 +102,14 @@ div.menu {
 div.menu a:link, div.menu a:visited {
    color: #FFFFFF;
 }
+
+.lookup {
+	color: #000000;
+    overflow: scroll;
+    width: 300px;
+    height: 200px;
+}
+
+table.translation {
+    overflow: scroll;
+}
