--- a/trunk/basa2/basaasa/basaasa/templates/derived/trans/fields.html
+++ b/trunk/basa2/basaasa/basaasa/templates/derived/trans/fields.html
@@ -1,4 +1,5 @@
-<table class="translation">
+<div class="translation">
+<table>
     <tr>
         <th>${_("Source")}</th>
         <th></th>
@@ -28,6 +29,7 @@
     </tr>
     % endfor
 </table>
+</div>
 
 <div>
 <table class="lookup">
